# pythonProjectTemplate

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  env.yaml  main.py  main_new.py  pyproject.toml  requirements.txt  update_requirements.py
.claude/skills/architecture-analyzer/: SKILL.md  examples.md  reference.md
.claude/skills/code-review-quality/: SKILL.md
.claude/skills/debug-helper/: SKILL.md
.claude/skills/functional-doc-generator/: README.md  SKILL.md  examples.md  reference.md
.claude/skills/git-commit-helper/: README.md  SKILL.md  examples.md
.claude/skills/postgresql-table-design/: SKILL.md
.claude/skills/refactor-assistant/: SKILL.md
.claude/skills/skill-writer/: SKILL.md
api/: README.md  api_router.py  auth.py  fastapi_center.py  http_status.py  main.py  middleware.py  test_api_module.py
api/auth/: auth_models.py  auth_service.py  token_service.py  utils.py
api/exception/: custom_exceptions.py
api/models/: result_vo.py  token_response_model.py
api/routes/: __init__.py  users.py
cache/: README.md  __init__.py  cache_keys.yaml  cache_keys_manager.py  cache_manager.py  factory.py  memory_cache.py  redis_cache.py  test_cache_module.py
config/: README.md  config.py  dev.yaml  prod.yaml  run_config_tests.py  test.yaml  test_config_module.py
db/: test_database_module.py
db/alembic/: README  env.py
db/alembic/versions/: 20240830_225910_测试变更.py
db/mysql/: README.md  __init__.py  mysql.py
db/mysql/mysql_config/: mysql.py
db/mysql/test/: test.py  test_table.py
db/mysql/transaction/: transaction_manager.py
db/mysql_config/: Table_structure_modification.md  test.py  test_table.py
db/sqlite_framework/: db_tests.py  db_utils.py  test_sqlite_toolkit.py
db/sqlite_framework/data/: app.db
dependencies/: DEPENDENCY_MANAGEMENT.md  README.md  install_dependencies.sh  requirements-dev-only.txt  requirements.txt  update_requirements.py
docs/: FRAMEWORK_OPTIMIZATION_SUMMARY.md  INDEX.md  PROJECT_ARCHITECTURE.md  architecture-analysis-report.md  configuration-guide.md  fix_plan.md
docs/database/: README.md
docs/guides/: api-guide.md  deployment-guide.md  development-guide.md  installation-guide.md  testing-guide.md
docs/guides/github/: README.md  detailed-guide.md  index.md  quick-guide.md  visual-guide.md
docs/legacy/: CODE_ORGANIZATION_OPTIMIZATION.md  FINAL_TEST_RESULTS.md  MIGRATION_GUIDE.md  README.md
docs/modules/: auth.md  cache.md  config.md  database.md  logging.md  monitoring.md  scheduler.md  testing.md  utils.md
docs/updates/: 001-project-structure-standardization.md  002-code-organization-optimization.md  003-comprehensive-testing-system.md  004-documentation-system-enhancement.md  005-testing-architecture-reorg-and-stability.md
log/: logHelper.py  test_log_module.py
modules/: __init__.py
modules/monitoring/: README.md  alerting.py  main.py  prometheus_exporter.py
modules/test/: test.py
monitoring/: alerting.py  main.py  test_monitoring_module.py
redis_msg_center/: README.md  consumer.py  main.py  message.py  message_config.py  producer.py
scheduler/: README.md  scheduler_center.py  test_scheduler_module.py
scheduler/tasks/: task1.py  task2.py
scripts/: verify_integration_fixes.sh
src/: __init__.py
src/api/: factory.py
src/api/exceptions/: __init__.py
src/api/schemas/: __init__.py
src/api/v1/: __init__.py
src/core/: __init__.py  exceptions.py
src/core/config/: config.py
src/plugins/: __init__.py
src/pythonprojecttemplate/: __init__.py  env.yaml  main.py
src/pythonprojecttemplate/api/: __init__.py  api_router.py  app.py  main.py  test_api_module.py
src/pythonprojecttemplate/cache/: cache_manager.py  factory.py  test_cache_module.py
src/pythonprojecttemplate/config/: config.py  dev.yaml  prod.yaml  run_config_tests.py  settings.py  test.yaml  test_config_module.py
src/pythonprojecttemplate/core/: constants.py  utils.py
src/pythonprojecttemplate/db/: session.py  test_database_module.py
src/pythonprojecttemplate/log/: logHelper.py  test_log_module.py
src/pythonprojecttemplate/modules/: base.py  loader.py
src/pythonprojecttemplate/monitoring/: alerting.py  main.py  prometheus_exporter.py  (+1 more)
src/services/: __init__.py
tests/: README.md  conftest.py  run_tests.py  test_framework_integration.py
tests/business/: test_test.py
tests/config/: test_config.py  test_security_settings.py
utils/: date_utils.py  str_utils.py  test_utils_module.py
utils/encrypt/: aes_encrypt.py  hs256_encrypt.py  sha_256_encrypt.py
utils/excel/: excel_utils.py
(+71 files in other folders)
